--- a/tools/create/package.json
+++ b/tools/create/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@8.14.2",
+  "packageManager": "pnpm@8.14.3",
   "description": "TEMPL create tools",
   "license": "MIT",
   "homepage": "https://github.com/rjoydip/templ/tree/main/tools/create#readme",
@@ -16,23 +16,23 @@
     "url": "https://github.com/rjoydip/templ/issues"
   },
   "files": [
-    "*.d.ts",
-    "dist"
+    "src"
   ],
   "engines": {
     "node": "^18.8.0 || >=20.6.0",
     "npm": ">=8"
   },
   "scripts": {
-    "app": "tsx ./src/app.ts",
-    "doc": "tsx ./src/doc.ts",
-    "pkg": "tsx ./src/pkg.ts"
+    "app": "tsx ./src/stacks/app.ts",
+    "doc": "tsx ./src/stacks/doc.ts",
+    "pkg": "tsx ./src/stacks/pkg.ts",
+    "server": "tsx ./src/stacks/server.ts"
   },
   "dependencies": {
     "consola": "^3.2.3",
     "giget": "^1.2.1",
     "latest-version": "^7.0.0",
-    "nypm": "^0.3.4"
+    "nypm": "^0.3.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.5"
