--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "commit": "turbo run commit && pnpm run changelog && better-commits",
     "eslint": "eslint -c eslint.config.js --color --cache --fix --cache-location .eslintcache .",
     "lint": "turbo run lint && pnpm run knip",
-    "knip": "knip --include files,dependencies",
+    "knip": "knip -c ./config/knip.ts --include files,dependencies",
     "setup": "turbo run setup",
     "test": "turbo run test"
   },
@@ -49,7 +49,6 @@
     "knip": "^4.2.1",
     "pnpm": "^8.14.3",
     "taze": "^0.13.1",
-    "tsx": "^4.7.0",
     "turbo": "^1.11.3"
   },
   "auto-changelog": {
