--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "yarn": ">=3"
   },
   "scripts": {
-    "prebuild": "pnpm run clean && taze -r -w -i -f -l",
+    "postinstall": "taze -r -w -i -f -l",
+    "prebuild": "pnpm run clean",
     "build": "turbo run build",
     "postbuild": "pnpm run -C scripts check",
     "bench": "turbo run bench",
@@ -28,7 +29,7 @@
     "commit": "turbo run commit && pnpm run changelog && better-commits",
     "eslint": "eslint -c eslint.config.js --color --cache --fix --cache-location .eslintcache .",
     "lint": "turbo run lint && pnpm run knip",
-    "knip": "knip --include files,dependencies",
+    "knip": "knip -c ./config/knip.ts --include files,dependencies",
     "setup": "turbo run setup",
     "test": "turbo run test"
   },
@@ -49,7 +50,6 @@
     "knip": "^4.2.1",
     "pnpm": "^8.14.3",
     "taze": "^0.13.1",
-    "tsx": "^4.7.0",
     "turbo": "^1.11.3"
   },
   "auto-changelog": {
