--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "build": "turbo run build",
     "postbuild": "pnpm run -C scripts check",
     "bench": "turbo run bench",
-    "changelog": "changelogen --output",
     "clean": "turbo run clean",
     "commit": "turbo run commit && pnpm run changelog && better-commits",
     "eslint": "eslint -c eslint.config.js --color --cache --fix --cache-location .eslintcache .",
     "lint": "turbo run lint && pnpm run knip",
     "knip": "knip -c ./config/knip.ts --include files,dependencies",
-    "release": "changelogen --release && npm publish && git push --follow-tags",
+    "release": "changelogen --output --release && npm publish && git push --follow-tags",
     "setup": "turbo run setup",
     "test": "turbo run test"
   },
