--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,19 +24,23 @@
     "npm": ">=8"
   },
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsup src/index.ts --watch --clean --target esnext --format esm --platform node --onSuccess 'node dist/index.js'",
+    "build": "tsup src/index.ts --dts --clean --minify --no-splitting --no-sourcemap --target esnext --format esm --platform node",
+    "server:load": "tsx ./test/server.load.ts",
     "test": "vitest run"
   },
   "dependencies": {
     "@hono/node-server": "^1.5.0",
     "@hono/zod-openapi": "^0.9.6",
-    "@scalar/hono-api-reference": "^0.3.26",
+    "@scalar/hono-api-reference": "^0.3.28",
     "consola": "^3.2.3",
     "hono": "^3.12.7"
   },
   "devDependencies": {
+    "@types/autocannon": "^7.12.5",
     "@types/node": "^20.11.7",
-    "pactum": "^3.6.0",
+    "autocannon": "^7.14.0",
+    "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "vitest": "^1.2.1"
   }
