--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "postbuild": "pnpm run -C scripts check",
     "bench": "turbo run bench",
     "clean": "turbo run clean",
-    "commit": "turbo run commit && pnpm run changelog && better-commits",
-    "eslint": "eslint -c eslint.config.js --color --cache --fix --cache-location .eslintcache .",
+    "commit": "turbo run commit && changelogen --output && better-commits",
+    "eslint": "eslint .",
     "lint": "turbo run lint && pnpm run knip",
     "knip": "knip -c ./config/knip.ts --include files,dependencies",
     "release": "changelogen --output --release && npm publish && git push --follow-tags",
