--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bench": "turbo run bench",
     "clean": "turbo run clean",
     "commit": "turbo run commit && pnpm run changelog && better-commits",
+    "changelog": "changelogen --output",
     "eslint": "eslint -c eslint.config.js --color --cache --fix --cache-location .eslintcache .",
     "lint": "turbo run lint && pnpm run knip",
     "knip": "knip -c ./config/knip.ts --include files,dependencies",
@@ -44,15 +45,12 @@
   ],
   "devDependencies": {
     "@antfu/eslint-config": "2.6.3",
-    "better-commits": "^1.10.0",
+    "better-commits": "^1.11.0",
     "changelogen": "^0.5.5",
     "eslint": "^8.56.0",
     "knip": "^4.2.1",
     "pnpm": "^8.14.3",
     "taze": "^0.13.1",
     "turbo": "^1.11.3"
-  },
-  "stackblitz": {
-    "startCommand": "pnpm i"
   }
 }
