--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -34,16 +34,17 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "bundle-require": "^4.0.2",
+    "@templ/schema": "workspace:*",
+    "c12": "^1.6.1",
     "joycon": "^3.1.1",
-    "strip-json-comments": "^5.0.1",
+    "untyped": "^1.4.2",
     "valibot": "^0.26.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.7",
-    "@vitest/coverage-v8": "^1.2.1",
+    "@vitest/coverage-v8": "^1.2.2",
     "tsup": "^8.0.1",
-    "vitest": "^1.2.1"
+    "vitest": "^1.2.2"
   },
   "size-limit": "1.3 KB"
 }
