--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": false,
     "strict": true,
+    "strictNullChecks": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
@@ -23,5 +24,5 @@
     "pretty": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "**/*.d.ts"]
 }
