--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+  "name": "@templ/workspace",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.14.3",
+  "packageManager": "pnpm@8.15.0",
   "description": "A modern monorepo project template",
   "author": "Joydip Roy <joydipand@gmail.com> (https://github.com/rjoydip)",
   "license": "MIT",
@@ -25,7 +26,7 @@
     "bench": "turbo run bench",
     "clean": "turbo run clean",
     "commit": "turbo run commit && better-commits",
-    "lint": "eslint . && turbo run lint && pnpm run knip",
+    "lint": "eslint . && turbo run lint",
     "knip": "knip -c ./config/knip.ts --include files,dependencies",
     "release": "npm publish && git push --follow-tags",
     "setup": "turbo run setup",
@@ -43,7 +44,7 @@
     "better-commits": "^1.11.0",
     "eslint": "^8.56.0",
     "knip": "^4.2.1",
-    "pnpm": "^8.14.3",
+    "pnpm": "^8.15.0",
     "taze": "^0.13.1",
     "turbo": "^1.11.3"
   }
