--- a/scripts/package.json
+++ b/scripts/package.json
@@ -36,6 +36,7 @@
     "dot-prop": "^8.0.2",
     "globby": "^14.0.0",
     "rollup": "^4.9.6",
+    "scule": "^1.2.0",
     "table": "^6.8.1",
     "terser": "^5.27.0",
     "type-coverage-core": "^2.27.1",
