refactor(none): refactored config and changelog generate (#213)
* 🔨 refactor(none): config and introduce schema, .stackblitz

* 🔨 refactor(none): refactor-22 resolved load config and unit testing

* 🧹 chore(none): refactor-22 package version updated

* 🐛 fix(scripts): refactor-22 package path in report table

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,18 +18,12 @@
       "extensions": [
         "aaron-bond.better-comments",
         "bierner.markdown-emoji",
-        "codecov.codecov",
         "christian-kohler.npm-intellisense",
         "dbaeumer.vscode-eslint",
         "davidanson.vscode-markdownlint",
         "eamodio.gitlens",
         "editorconfig.editorconfig",
-        "esbenp.prettier-vscode",
-        "ms-vscode-remote.remote-containers",
-        "rangav.vscode-thunder-client",
-        "redhat.vscode-yaml",
-        "zixuanchen.vitest-explorer",
-        "streetsidesoftware.code-spell-checker"
+        "zixuanchen.vitest-explorer"
       ]
     }
   },
