--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "templ",
+  "name": "@templ/workspace",
   "type": "module",
-  "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@8.14.3",
+  "packageManager": "pnpm@8.15.0",
   "description": "A modern monorepo project template",
   "author": "Joydip Roy <joydipand@gmail.com> (https://github.com/rjoydip)",
   "license": "MIT",
@@ -26,33 +25,27 @@
     "postbuild": "pnpm run -C scripts check",
     "bench": "turbo run bench",
     "clean": "turbo run clean",
-    "commit": "turbo run commit && changelogen --output && better-commits",
-    "eslint": "eslint .",
-    "lint": "turbo run lint && pnpm run knip",
+    "commit": "turbo run commit && better-commits",
+    "lint": "eslint . && turbo run lint",
     "knip": "knip -c ./config/knip.ts --include files,dependencies",
-    "release": "changelogen --output --release && npm publish && git push --follow-tags",
+    "release": "npm publish && git push --follow-tags",
     "setup": "turbo run setup",
     "test": "turbo run test"
   },
   "workspaces": [
     "apps/**",
-    "benchmark",
-    "docs",
     "packages/**",
     "scripts",
     "tools/**"
   ],
   "devDependencies": {
     "@antfu/eslint-config": "2.6.3",
-    "better-commits": "^1.10.0",
-    "changelogen": "^0.5.5",
+    "@changesets/cli": "^2.27.1",
+    "better-commits": "^1.11.0",
     "eslint": "^8.56.0",
     "knip": "^4.2.1",
-    "pnpm": "^8.14.3",
+    "pnpm": "^8.15.0",
     "taze": "^0.13.1",
     "turbo": "^1.11.3"
-  },
-  "stackblitz": {
-    "startCommand": "pnpm i"
   }
 }
