--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,8 +2,8 @@
   "name": "@templ/cli",
   "cliname": "TEMPL",
   "type": "module",
-  "version": "0.0.0",
-  "description": "TEMPL cli service",
+  "version": "0.0.1",
+  "description": "Cli",
   "license": "MIT",
   "homepage": "https://github.com/rjoydip/templ/tree/main/packages/cli#readme",
   "repository": {
@@ -44,7 +44,7 @@
     "sade": "^1.8.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.7",
+    "@types/node": "^20.11.9",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0"
   },
