--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@templ/config",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
-  "description": "TEMPL config service",
+  "description": "Config",
   "license": "MIT",
   "homepage": "https://github.com/rjoydip/templ/tree/main/packages/config#readme",
   "repository": {
@@ -34,16 +34,16 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "bundle-require": "^4.0.2",
-    "joycon": "^3.1.1",
-    "strip-json-comments": "^5.0.1",
+    "@templ/schema": "workspace:*",
+    "c12": "^1.6.1",
+    "untyped": "^1.4.2",
     "valibot": "^0.26.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.7",
-    "@vitest/coverage-v8": "^1.2.1",
+    "@types/node": "^20.11.9",
+    "@vitest/coverage-v8": "^1.2.2",
     "tsup": "^8.0.1",
-    "vitest": "^1.2.1"
+    "vitest": "^1.2.2"
   },
   "size-limit": "1.3 KB"
 }
