--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@templ/core",
   "type": "module",
-  "version": "0.0.0",
-  "description": "TEMPL core service",
+  "version": "0.0.1",
+  "description": "Core",
   "license": "MIT",
   "homepage": "https://github.com/rjoydip/templ/tree/main/packages/core#readme",
   "repository": {
@@ -34,10 +34,10 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@types/node": "^20.11.7",
-    "@vitest/coverage-v8": "^1.2.1",
+    "@types/node": "^20.11.9",
+    "@vitest/coverage-v8": "^1.2.2",
     "tsup": "^8.0.1",
-    "vitest": "^1.2.1"
+    "vitest": "^1.2.2"
   },
   "size-limit": "100 B"
 }
