--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@templ/scripts",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
-  "description": "TEMPL root scripts",
+  "description": "Scripts",
   "license": "MIT",
   "homepage": "https://github.com/rjoydip/templ/tree/main/scripts#readme",
   "repository": {
@@ -36,13 +36,14 @@
     "dot-prop": "^8.0.2",
     "globby": "^14.0.0",
     "rollup": "^4.9.6",
+    "scule": "^1.2.0",
     "table": "^6.8.1",
     "terser": "^5.27.0",
     "type-coverage-core": "^2.27.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "^20.11.7",
+    "@types/node": "^20.11.9",
     "tsx": "^4.7.0"
   }
 }
