--- a/tools/templates/basic-ts/package.json
+++ b/tools/templates/basic-ts/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@templ/basic-ts",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
-  "packageManager": "pnpm@8.14.3",
-  "description": "TEMPL basic-ts service",
+  "packageManager": "pnpm@8.15.0",
+  "description": "basic-ts",
   "license": "MIT",
   "homepage": "https://github.com/rjoydip/templ/tree/main/packages/basic-ts#readme",
   "repository": {
@@ -36,9 +36,9 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^20.11.7",
-    "@vitest/coverage-v8": "^1.2.1",
+    "@types/node": "^20.11.9",
+    "@vitest/coverage-v8": "^1.2.2",
     "tsup": "^7.3.0",
-    "vitest": "^1.2.1"
+    "vitest": "^1.2.2"
   }
 }
