--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -31,7 +31,8 @@
     "npm": ">=8"
   },
   "scripts": {
-    "build": "tsup src/index.ts --dts --clean --minify --no-splitting --no-sourcemap --target esnext --format esm --platform node",
+    "build": "esbuild src/index.ts --bundle --minify --tree-shaking=true --target=node20 --packages=external --format=esm --platform=node --outfile=dist/index.js",
+    "dev": "esbuild src/index.ts --watch --bundle --minify --tree-shaking=true --target=node20 --packages=external --format=esm --platform=node --outfile=dist/index.js",
     "test": "vitest run"
   },
   "dependencies": {
@@ -42,9 +43,9 @@
     "untyped": "^1.4.2"
   },
   "devDependencies": {
-    "@types/node": "^20.11.9",
+    "@types/node": "^20.11.10",
     "@vitest/coverage-v8": "^1.2.2",
-    "tsup": "^7.3.0",
+    "esbuild": "^0.20.0",
     "vitest": "^1.2.2"
   },
   "size-limit": "1.3 KB"
