--- a/packages/templ/package.json
+++ b/packages/templ/package.json
@@ -31,14 +31,15 @@
     "npm": ">=8"
   },
   "scripts": {
-    "build": "tsup src/index.ts --dts --clean --minify --no-splitting --no-sourcemap --target esnext --format esm --platform node"
+    "build": "esbuild src/index.ts --bundle --minify --tree-shaking=true --target=node20 --packages=external --format=esm --platform=node --outfile=dist/index.js",
+    "dev": "esbuild src/index.ts --watch --bundle --minify --tree-shaking=true --target=node20 --packages=external --format=esm --platform=node --outfile=dist/index.js"
   },
   "dependencies": {
     "consola": "^3.2.3"
   },
   "devDependencies": {
-    "@types/node": "^20.11.9",
-    "tsup": "^7.3.0"
+    "@types/node": "^20.11.10",
+    "esbuild": "^0.20.0"
   },
   "size-limit": "100 B"
 }
