--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -41,6 +41,7 @@
     "@types/autocannon": "^7.12.5",
     "@types/node": "^20.11.10",
     "autocannon": "^7.14.0",
+    "esbuild": "^0.20.0",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "vitest": "^1.2.2"
