--- a/tools/generator/templates/basic-js/package.json
+++ b/tools/generator/templates/basic-js/package.json
@@ -35,8 +35,8 @@
     "dev": "node esbuild.config.js --watch",
     "test": "vitest run"
   },
-  "dependencies": {},
   "devDependencies": {
+    "@templ/config": "workspace:*",
     "@types/node": "^20.11.16",
     "@vitest/coverage-v8": "^1.2.2",
     "esbuild": "^0.20.0",
