--- a/tools/generator/templates/basic-ts/package.json
+++ b/tools/generator/templates/basic-ts/package.json
@@ -36,6 +36,7 @@
     "test": "vitest run"
   },
   "devDependencies": {
+    "@templ/config": "workspace:*",
     "@types/node": "^20.11.16",
     "@vitest/coverage-v8": "^1.2.2",
     "esbuild": "^0.20.0",
