--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -41,6 +41,7 @@
     "@templ/tsconfig": "workspace:*",
     "@types/autocannon": "^7.12.5",
     "@types/node": "^20.11.16",
+    "@vitest/coverage-v8": "^1.2.2",
     "autocannon": "^7.14.0",
     "esbuild": "^0.20.0",
     "tsx": "^4.7.0",
