--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,11 +58,10 @@ jobs:
           pnpm run -C scripts ci:env-copy
           pnpm run build
           pnpm run -C scripts ci:env-delete
-          pnpm run -C scripts check
+          pnpm run -C scripts build:check
 
   lint:
     runs-on: ubuntu-latest
-    needs: [build]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -71,15 +70,6 @@ jobs:
 
       - name: Lint
         run: pnpm run lint
-
-      - name: Type Coverage
-        run: pnpm run -C scripts type-cov
-
-      - name: Size Limit
-        run: pnpm run -C scripts size-limit
-
-      - name: Size Report
-        run: pnpm run -C scripts size-report
 
   test:
     runs-on: ${{ matrix.os }}
