--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "prepare": "simple-git-hooks",
     "postinstall": "nr deps:update",
     "all": "nr deps:update && nr build && nr lint",
-    "build": "nr -C scripts clean && turbo run build && nr -C scripts check",
+    "build": "nr clean && turbo run build && nr build:check",
+    "clean": "nr -C scripts clean",
+    "build:check": "nr -C scripts build:check",
     "commit": "nr all && better-commits",
     "deps:update": "taze -r -w -i -f -l",
-    "lint": "eslint . && nr knip && nr -C scripts type-cov",
-    "knip": "knip -c ./tools/knip.config.ts",
+    "lint": "eslint . && nr knip && nr lint:type-cov",
+    "knip": "knip -c ./config/knip.config.ts",
     "release": "changeset version && npm publish && git push --follow-tags",
+    "lint:type-cov": "nr -C scripts lint:type-cov",
     "test": "turbo run test"
   },
   "devDependencies": {
