--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,26 +45,6 @@ jobs:
     steps:
       - uses: actions/labeler@v4
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-node
-      - name: Install
-        run: pnpm install --no-frozen-lockfile
-
-      - name: Lint
-        run: pnpm run lint
-
-      - name: Type Coverage
-        run: pnpm run -C scripts type-cov
-
-      - name: Size Limit
-        run: pnpm run -C scripts size-limit
-
-      - name: Size Report
-        run: pnpm run -C scripts size-report
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -78,7 +58,18 @@ jobs:
           pnpm run -C scripts ci:env-copy
           pnpm run build
           pnpm run -C scripts ci:env-delete
-          pnpm run -C scripts check
+          pnpm run -C scripts build:check
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup-node
+      - name: Install
+        run: pnpm install --no-frozen-lockfile
+
+      - name: Lint
+        run: pnpm run lint
 
   test:
     runs-on: ${{ matrix.os }}
@@ -88,7 +79,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node_version: [18]
       fail-fast: false
-    needs: [lint, build]
+    needs: [build]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
