--- a/tools/tsconfig/package.json
+++ b/tools/tsconfig/package.json
@@ -16,7 +16,9 @@
     "url": "https://github.com/rjoydip/templ/issues"
   },
   "files": [
-    "./base.json"
+    "./base.json",
+    "./next.json",
+    "./react.json"
   ],
   "engines": {
     "node": "^18.8.0 || >=20.6.0",
