feat(web): vite & preact app with tanstack (#221)
* ✨ feat(web): vite & tanstack router setup

* 🔨 refactor(none): desktop & docs minimum code, refactor code

* 🧹 chore(none): package version updated

* 🐛 fix(none): build app.tsx import issue try-1

* 🐛 fix(none): build app.tsx import issue try-2

* 🐛 fix(none): build failure on desktop and docs

* 🐛 fix(none): type in docs unit test code

--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "sideEffects": true,
   "workspaces": [
     "apps/**",
+    "config/**",
     "packages/**",
     "plugins/**",
     "scripts",
-    "tools/**"
+    "generator"
   ],
   "engines": {
     "node": ">=18",
@@ -26,7 +27,6 @@
     "yarn": ">=3"
   },
   "scripts": {
-    "prepare": "simple-git-hooks",
     "postinstall": "nr deps:update",
     "all": "nr deps:update && nr build && nr lint",
     "build": "nr clean && turbo run build && nr build:check",
@@ -48,11 +48,7 @@
     "eslint": "^8.56.0",
     "knip": "^4.3.1",
     "pnpm": "^8.15.1",
-    "simple-git-hooks": "^2.9.0",
     "taze": "^0.13.2",
     "turbo": "^1.12.2"
-  },
-  "simple-git-hooks": {
-    "pre-push": "pnpm run test"
   }
 }
