--- a/generator/templates/basic-ts/package.json
+++ b/generator/templates/basic-ts/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "@templ/server",
+  "name": "@templ/basic-ts",
   "type": "module",
   "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@8.15.1",
-  "description": "Server",
+  "description": "basic-ts",
   "license": "MIT",
-  "homepage": "https://github.com/rjoydip/templ/tree/main/packages/server#readme",
+  "homepage": "https://github.com/rjoydip/templ/tree/main/packages/basic-ts#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rjoydip/templ.git",
-    "directory": "apps/server"
+    "directory": "packages/basic-ts"
   },
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
   },
+  "exports": {
+    "types": "./dist/index.d.ts",
+    "import": "./dist/index.js",
+    "require": "./dist/index.js"
+  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "*.d.ts",
     "dist"
@@ -25,24 +32,14 @@
   },
   "scripts": {
     "build": "tsx esbuild.config.ts",
-    "dev": "tsx ./src/index",
-    "server:load": "tsx ./test/server.load.ts",
+    "dev": "tsx esbuild.config.ts --watch",
     "test": "vitest run"
-  },
-  "dependencies": {
-    "@hono/node-server": "^1.7.0",
-    "@hono/zod-openapi": "^0.9.6",
-    "@scalar/hono-api-reference": "^0.3.39",
-    "consola": "^3.2.3",
-    "hono": "^3.12.11"
   },
   "devDependencies": {
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
-    "@types/autocannon": "^7.12.5",
     "@types/node": "^20.11.16",
     "@vitest/coverage-v8": "^1.2.2",
-    "autocannon": "^7.14.0",
     "esbuild": "^0.20.0",
     "tsx": "^4.7.0",
     "vitest": "^1.2.2"
