--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.0",
     "postcss": "^8.4.34",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7"
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.2.2",
     "typescript": "^5.3.3",
