--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -27,6 +27,5 @@
     "isolatedModules": true,
     "skipLibCheck": true
   },
-  "references": [{ "path": "./tsconfig.node.json" }],
-  "include": ["src"]
+  "include": ["src", "index.tsx"]
 }
