--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,12 +22,8 @@
     "dev": "next dev --port=3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
     "preview": "next build && next start",
-    "typecheck": "tsc --noEmit",
-    "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@templ/ui": "workspace:*",
@@ -41,18 +37,11 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.55",
-    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-tailwindcss": "^3.14.2",
     "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
