--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@8.15.1",
-  "description": "ui",
+  "description": "UI",
   "license": "MIT",
   "homepage": "https://github.com/rjoydip/templ/tree/main/packages/ui#readme",
   "repository": {
@@ -15,21 +15,13 @@
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
   },
-  "exports": {
-    "./globals.css": "./src/styles/globals.css",
-    "./postcss.config": "./postcss.config.js",
-    "./tailwind.config": "./tailwind.config.ts",
-    "./lib/*": "./src/lib/*.ts",
-    "./*": "./src/components/*.tsx"
-  },
+  "main": "./index.tsx",
+  "types": "./index.tsx",
   "engines": {
     "node": "^18.8.0 || >=20.6.0",
     "npm": ">=8"
   },
   "scripts": {
-    "dev": "vite --port=3002",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
     "test": "vitest run"
   },
   "dependencies": {
@@ -48,10 +40,7 @@
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.2.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.0",
     "vitest": "^1.2.2"
   }
 }
