--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,13 +15,24 @@
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
   },
-  "main": "./index.tsx",
-  "types": "./index.tsx",
+  "exports": {
+    "types": "./dist/index.d.ts",
+    "import": "./dist/index.js",
+    "require": "./dist/index.js"
+  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "*.d.ts",
+    "dist"
+  ],
   "engines": {
     "node": "^18.8.0 || >=20.6.0",
     "npm": ">=8"
   },
   "scripts": {
+    "build": "tsx esbuild.config.ts",
+    "dev": "tsx esbuild.config.ts --watch",
     "test": "vitest run"
   },
   "dependencies": {
@@ -31,16 +42,19 @@
     "clsx": "^2.1.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20.11.16",
+    "@templ/config": "workspace:*",
+    "@templ/tsconfig": "workspace:*",
+    "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
     "@vitest/coverage-v8": "^1.2.2",
+    "esbuild": "^0.20.0",
+    "tsx": "^4.7.0",
     "vitest": "^1.2.2"
-  }
+  },
+  "size-limit": "1.3 KB"
 }
