--- a/plugins/esbuild-plugin-templ/package.json
+++ b/plugins/esbuild-plugin-templ/package.json
@@ -34,13 +34,14 @@
     "build": "tsx ./esbuild.config.ts"
   },
   "dependencies": {
+    "@lukeed/ms": "^2.0.2",
     "consola": "^3.2.3",
     "esbuild": "^0.20.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@templ/tsconfig": "workspace:*",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.11.17",
     "tsx": "^4.7.0"
   }
 }
