--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@templ/server",
+  "name": "@templ/api",
   "type": "module",
   "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@8.15.1",
-  "description": "Server",
+  "description": "API",
   "license": "MIT",
-  "homepage": "https://github.com/rjoydip/templ/tree/main/packages/server#readme",
+  "homepage": "https://github.com/rjoydip/templ/tree/main/packages/api#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rjoydip/templ.git",
-    "directory": "apps/server"
+    "directory": "apps/api"
   },
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
@@ -26,13 +26,13 @@
   "scripts": {
     "build": "tsx esbuild.config.ts",
     "dev": "tsx ./src/index",
-    "server:load": "tsx ./test/server.load.ts",
+    "api:load": "tsx ./test/api.load.ts",
     "test": "vitest run"
   },
   "dependencies": {
     "@hono/node-server": "^1.7.0",
     "@hono/zod-openapi": "^0.9.6",
-    "@scalar/hono-api-reference": "^0.3.43",
+    "@scalar/hono-api-reference": "^0.3.47",
     "consola": "^3.2.3",
     "hono": "^3.12.12"
   },
@@ -40,11 +40,12 @@
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
     "@types/autocannon": "^7.12.5",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.11.17",
     "@vitest/coverage-v8": "^1.2.2",
     "autocannon": "^7.14.0",
     "esbuild": "^0.20.0",
     "tsx": "^4.7.0",
     "vitest": "^1.2.2"
-  }
+  },
+  "size-limit": "1024 B"
 }
