--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -33,6 +33,8 @@
   "scripts": {
     "build": "tsx esbuild.config.ts",
     "dev": "tsx esbuild.config.ts --watch",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "test": "vitest run"
   },
   "dependencies": {
@@ -47,12 +49,22 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.1.4",
+    "@storybook/addon-essentials": "^7.6.13",
+    "@storybook/addon-interactions": "^7.6.13",
+    "@storybook/addon-links": "^7.6.13",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/addon-themes": "^7.6.13",
+    "@storybook/react": "^7.6.13",
+    "@storybook/react-vite": "^7.6.13",
+    "@storybook/test": "^7.6.13",
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@vitest/coverage-v8": "^1.2.2",
     "esbuild": "^0.20.0",
+    "storybook": "^7.6.13",
     "tsx": "^4.7.0",
     "vitest": "^1.2.2"
   },
