--- a/generator/package.json
+++ b/generator/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
-  "packageManager": "pnpm@8.15.1",
+  "packageManager": "pnpm@8.15.2",
   "description": "Generator",
   "license": "MIT",
   "homepage": "https://github.com/rjoydip/templ/tree/main/generator#readme",
@@ -32,7 +32,8 @@
     "consola": "^3.2.3",
     "dot-prop": "^8.0.2",
     "giget": "^1.2.1",
-    "latest-version": "^8.0.0"
+    "latest-version": "^8.0.0",
+    "replace-string": "^4.0.0"
   },
   "devDependencies": {
     "@templ/tsconfig": "workspace:*",
