--- a/generator/templates/basic-ts/package.json
+++ b/generator/templates/basic-ts/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
-  "packageManager": "pnpm@8.15.1",
+  "packageManager": "pnpm@8.15.2",
   "description": "basic-ts",
   "license": "MIT",
   "homepage": "https://github.com/rjoydip/templ/tree/main/packages/basic-ts#readme",
@@ -36,6 +36,7 @@
     "test": "vitest run"
   },
   "devDependencies": {
+    "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.17",
     "@vitest/coverage-v8": "^1.2.2",
