🔨 refactor(none): refactor config and drop typecov linting

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@templ/tsconfig/next.json",
+  "extends": "../../.config/tsconfig/next.json",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
