--- a/generator/tsconfig.json
+++ b/generator/tsconfig.json
@@ -1,4 +1,4 @@
 {
-  "extends": "@templ/tsconfig/base.json",
+  "extends": "../.config/tsconfig/base.json",
   "include": ["src/**/*.ts", "esbuild.config.ts"]
 }
