--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@templ/tsconfig/base.json",
+  "extends": "../../.config/tsconfig/base.json",
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
