--- a/scripts/package.json
+++ b/scripts/package.json
@@ -28,8 +28,7 @@
     "build:size-report": "tsx ./src/build/size-report.ts",
     "ci:env-copy": "tsx ./src/ci/env-copy.ts",
     "ci:env-delete": "tsx ./src/ci/env-delete.ts",
-    "lint": "nr lint:type-cov && nr automd",
-    "lint:type-cov": "tsx ./src/lint/type-cov.ts"
+    "lint": "nr automd"
   },
   "dependencies": {
     "automd": "^0.3.0",
@@ -42,12 +41,10 @@
     "scule": "^1.3.0",
     "slash": "^5.1.0",
     "table": "^6.8.1",
-    "terser": "^5.27.1",
-    "type-coverage-core": "^2.27.1"
+    "terser": "^5.27.1"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.12",
-    "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.11.19",
     "tsx": "^4.7.1"
   }
