--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,4 +1,4 @@
 {
-  "extends": "@templ/tsconfig/base.json",
-  "include": ["src/**/*.ts", "esbuild.config.ts"]
+  "extends": "../.config/tsconfig/base.json",
+  "include": ["src/**/*.ts"]
 }
